samples/_failures_safe/1761314472_1659d9_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_84184b7b.c: In function ‘main’:
./samples/SAFE/__tmp_84184b7b.c:145:9: error: expected declaration or statement at end of input
  145 |         if (line[0] == '\n' || line[0] == '\0') break;
      |         ^~
./samples/SAFE/__tmp_84184b7b.c:145:9: error: expected declaration or statement at end of input
